Update i3wm config

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -1,43 +1,25 @@
-
-
+##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
+##    _  ____                        
+##   (_)|___ \                       
+##    _   __) | __      __ _ __ ___  
+##   | | |__ <  \ \ /\ / /| '_ ` _ \
+##   | | ___) |  \ V  V / | | | | | |
+##   |_||____/    \_/\_/  |_| |_| |_|
+##
+##  i3 config file (v4)
+##
+##  Please see https://i3wm.org/docs/userguide.html for a complete reference!
+##
+##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
+include keybindings.conf aesthetics.conf startup_processes.conf
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
 #
-# i3 config file (v4)
-#
-# Please see https://i3wm.org/docs/userguide.html for a complete reference!
-#
-#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
-#
-#! Required programms to be installed for this to work:
+#! Required programms to be installed for this to work as intentded:
 #  - nitrogen
 #  - i3blocks
 #  - rofi
 #  - compton
 #
-#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
-
-# Set the background
-exec --no-startup-id nitrogen --set-zoom-fill /home/tygo/dotfiles/wallpapers/default.jpg
-# exec_always --no-startup-id nitrogen --restore
-
-# Start XDG autostart .desktop files using dex. See also : https://wiki.archlinux.org/index.php/XDG_Autostart for more.
-exec --no-startup-id dex --autostart --environment i3
-
-# xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
-# screen before suspend. Use loginctl lock-session to lock your screen.
-exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
-
-# NetworkManager is the most popular way to manage wireless networks on Linux,
-# and nm-applet is a desktop environment-independent system tray GUI for it.
-exec --no-startup-id nm-applet
-
-# TODO : fix the
-set $compton_fade_enable               -f
-#set $compton_fade_delay_between_ticks  -D 1
-#set $compton_fade_SOMETHING            -I "0.05"
-#set $compton_fade_SOMETHING_ELSE       -O "0.05"
-exec --no-startup-id compton $compton_fade_enable
-
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ SETTING VARIABLES ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
 
 set $alt Mod1
@@ -57,84 +39,6 @@ set $terminal i3-sensible-terminal
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
-#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ KEY BINDINGS ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
-
-# reload the configuration file
-bindsym $mod+$shift+c reload
-
-# restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
-bindsym $mod+$shift+r restart
-
-# start a terminal
-bindsym $mod+Return exec $terminal
-
-# killing all instances of a window
-bindsym $mod+q [class=__focused__] kill
-
-# kill focused window
-bindsym $mod+$shift+q kill
-
-# A more modern dmenu replacement is rofi:
-# bindcode $mod+40 exec "rofi -modi drun,run -show drun"
-# There also is i3-dmenu-desktop which only displays applications shipping a
-# .desktop file. It is a wrapper around dmenu, so you need that installed.
-# bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
-
-# split in horizontal orientation
-bindsym $mod+h split h
-
-# split in vertical orientation
-bindsym $mod+v split v
-
-# enter fullscreen mode for the focused container
-bindsym $ctrl+$alt+f fullscreen toggle
-
-# change container layout (stacked, tabbed, toggle split)
-# bindsym $mod+s layout stacking
-# bindsym $mod+w layout tabbed
-# bindsym $mod+e layout toggle split
-
-# toggle tiling / floating
-bindsym $mod+$shift+space floating toggle
-
-# change focus between tiling / floating windows
-#bindsym $mod+DETERMINE_ME focus mode_toggle
-
-# focus the parent container
-bindsym $mod+a focus parent
-
-# focus the child container
-bindsym $mod+d focus child
-
-#| program launchers
-
-# dmenu
-#set $search_case_insensitive    -i
-#set $dmenu_amount_of_Lines      -l 10
-#set $dmenu_foreground           -nf
-#set $dmenu_foreground_selected  -sf
-#set $dmenu_background           -nb
-#set $dmenu_background_selected  -sb
-#bindsym $mod+space exec --no-startup-id dmenu_run $search_case_insensitive $dmenu_amount_of_Lines $dmenu_background $background $dmenu_foreground $inactive $dmenu_foreground_selected $foreground $dmenu_background_selected $background
-
-# rofi
-set $rofi_amount_of_Lines  -l 10
-set $rofi_width            -width 100
-set $rofi_opacity          -opacity 85
-set $rofi_foreground       -fg
-set $rofi_background       -bg
-bindsym $mod+space exec --no-startup-id rofi $rofi_opacity $rofi_width $rofi_amount_of_Lines -show run
-# $rofi_foreground $foreground $rofi_background $background
-
-#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ CONTROLLING AUDIO ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
-
-# Use pactl to adjust volume in PulseAudio.
-set $refresh_i3status killall -SIGUSR1 i3status
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
-bindsym XF86AudioMute        exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
-bindsym XF86AudioMicMute     exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
-
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ MANAGING WORKSPACES ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
 
 # Define names for default workspaces.
@@ -144,56 +48,8 @@ set $ws3 "3: Browser Windows"
 set $ws4 "4: Window Stack"
 set $ws5 "5: File Browsers"
 
-#| moving across workspaces
-
-# switch to workspace using indexes
-bindsym $mod+1 workspace number $ws1
-bindsym $mod+2 workspace number $ws2
-bindsym $mod+3 workspace number $ws3
-bindsym $mod+4 workspace number $ws4
-bindsym $mod+5 workspace number $ws5
-
-# switch to workspace using arrow keys, and tab (non-functional)
-#bindsym $mod+Left  workspace next
-#bindsym $mod+Right workspace prev
-#bindsym $mod+$tab workspace back_and_forth
-
-#| moving windows across workspaces
-
-# move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace number $ws1
-bindsym $mod+Shift+2 move container to workspace number $ws2
-bindsym $mod+Shift+3 move container to workspace number $ws3
-bindsym $mod+Shift+4 move container to workspace number $ws4
-bindsym $mod+Shift+5 move container to workspace number $ws5
-
-#| swapping one window to another
-
-# move focused window around
-bindsym $mod+$shift+j move left
-bindsym $mod+$shift+k move down
-bindsym $mod+$shift+l move up
-bindsym $mod+$shift+semicolon move right
-
-# alternatively, you can use the cursor keys:
-bindsym $mod+$shift+Left move left
-bindsym $mod+$shift+Down move down
-bindsym $mod+$shift+Up move up
-bindsym $mod+$shift+Right move right
-
-#| changing focus from one window to another
-
-# changing focus on window
-bindsym $mod+j focus left
-bindsym $mod+k focus down
-bindsym $mod+l focus up
-bindsym $mod+semicolon focus right
-
-# alternatively, you can use the cursor keys:
-bindsym $mod+Left focus left
-bindsym $mod+Down focus down
-bindsym $mod+Up focus up
-bindsym $mod+Right focus right
+# This option determines in which mode new containers on workspace level will start.
+workspace_layout default
 
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ PINNING APPS TO SPACES ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
 #  To get the name of a application:
@@ -204,113 +60,23 @@ bindsym $mod+Right focus right
 #   5. a string of text should be printed. Use the last one.
 
 # Workspace 1
-assign [class="Gnome-terminal"] $ws1
+assign [class="(?i)gnome-terminal"] $ws1
 
 # workspace 2
-assign [class="code"] $ws2
-assign [class="Code"] $ws2
+assign [class="(?i)code"] $ws2
 
 # workspace 3
-assign [class="firefox"] $ws3
+assign [class="(?i)firefox"] $ws3
 
 # workspace 4
-assign [class="discord"] $ws4
+assign [class="(?i)discord"] $ws4
 
 # workspace 5
-assign [class="Org.gnome.Nautilus"] $ws5
-
-#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ MANAGING USER SESSION ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
-
-# lock screen
-bindsym $alt+$ctrl+q exec i3lock
-
-# exit i3 (logs you out of your X session)
-bindsym $ctrl+Shift+q exec "i3-nagbar -t warning -m 'Are you sure you want to log out?' -B 'confirm' 'i3-msg exit'"
-
-#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ RESIZING MODE ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
-
-bindsym $mod+r mode "resize"
-
-# resize window (you can also use the mouse for that)
-mode "resize" {
-    # These bindings trigger as soon as you enter the resize mode
-
-    # Pressing left will shrink the window’s width.
-    # Pressing right will grow the window’s width.
-    # Pressing up will shrink the window’s height.
-    # Pressing down will grow the window’s height.
-    bindsym j resize shrink width 10 px or 10 ppt
-    bindsym k resize grow height 10 px or 10 ppt
-    bindsym l resize shrink height 10 px or 10 ppt
-    bindsym semicolon resize grow width 10 px or 10 ppt
-
-    # same bindings, but for the arrow keys
-    bindsym Left resize shrink width 10 px or 10 ppt
-    bindsym Down resize grow height 10 px or 10 ppt
-    bindsym Up resize shrink height 10 px or 10 ppt
-    bindsym Right resize grow width 10 px or 10 ppt
-
-    # back to normal: Enter or Escape or $mod+r
-    bindsym Return mode "default"
-    bindsym Escape mode "default"
-    bindsym $mod+r mode "default"
-}
-
-#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ APPEARANCE SETTINGS ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
-
-# Font for window titles. Will also be used by the bar unless a different font is used in the bar {} block below.
-font pango:DejaVu Sans Mono 8
-
-# color defines for zenburn styled i3
-set $background     "#2c2c2e"
-set $foreground     "#ffffff"
-set $accent         "#a155b5"
-set $inactive       "#8f8f8f"
-set $important      "#e89393"
-set $none           "#00000000"
-
-# property                border       background   text         indicator
-client.focused            $background  $background  $foreground  $none
-client.unfocused          $background  $background  $inactive    $none
-client.focused_inactive   $background  $background  $accent      $none
-client.urgent             $important   $important   $foreground  $none
-
-# Hide window name
-default_border pixel 1
-default_floating_border pixel 1
-
-#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ BAR SETTINGS ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
-
-# Start i3bar to display a workspace bar (plus the system information i3status finds out, if available)
-bar {
-    
-    i3bar_command i3bar --transparency
-    status_command i3blocks -c $i3blocksconf
-    #i3status
-
-    #padding 15px
-    #tray_padding 15px
-    separator_symbol " | "
-    workspace_buttons yes
-    strip_workspace_numbers yes
-
-    colors {
-
-        background          $background
-        statusline          $foreground
-        separator           $inactive
-        #focused_separator   $accent
-
-
-        # property          border       background         text
-        focused_workspace   $background  $background        $foreground
-        active_workspace    $background  $background        $foreground
-        inactive_workspace  $background  $background        $inactive
-        urgent_workspace    $important   $background        $important
-    }
-}
+assign [class="(?i)org.gnome.Nautilus"] $ws5
 
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
-set $i3blocksconf ~/.config/i3/i3blocks.conf
 
-This paste expires in <1 hour. Public IP access. Share whatever you see with others in seconds with Context. Terms of ServiceReport this
+# switching to window that requests focus (is not perfect) is used for switching when opening an app.
+for_window [class="."] focus
+
+#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
