--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -1,12 +1,16 @@
-
-
-#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
-#
-# i3blocks config file
-#
-# Please see man i3blocks for a complete reference! The man page is also hosted at http://vivien.github.io/i3blocks
-#
-#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
+##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
+##    _  ____    ____   _               _         
+##   (_)|___ \  |  _ \ | |             | |        
+##    _   __) | | |_) || |  ___    ___ | | __ ___
+##   | | |__ <  |  _ < | | / _ \  / __|| |/ // __|
+##   | | ___) | | |_) || || (_) || (__ |   < \__ \
+##   |_||____/  |____/ |_| \___/  \___||_|\_\|___/
+##
+##  i3blocks config file
+##
+##  Please see http://vivien.github.io/i3blocks for a complete reference!
+##
+##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
 #
 # List of valid properties:
 #
@@ -29,7 +33,7 @@
 
 # Global properties
 command=/usr/share/i3blocks/$BLOCK_NAME
-separator_block_width=15
+separator_block_width=35
 markup=none
 
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
@@ -135,5 +139,3 @@ interval=1
 #instance=NUM
 #interval=once
 #signal=11
-
-This paste expires in <1 hour. Public IP access. Share whatever you see with others in seconds with Context. Terms of ServiceReport this
