--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -32,7 +32,8 @@
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
 
 # Global properties
-command=/usr/share/i3blocks/$BLOCK_NAME
+command=/home/tygo/.config/i3/blocklets/$BLOCK_NAME
+#/usr/share/i3blocks/$BLOCK_NAME
 separator_block_width=35
 markup=none
 
@@ -48,17 +49,17 @@ interval=1
 signal=10
 separator=true
 
-#| Memory usage
-[memory]
-label=MEM
-separator=true
-interval=30
+# #| Memory usage
+# [memory]
+# label=MEM
+# separator=true
+# interval=30
 
-[memory]
-label=SWAP
-instance=swap
-separator=false
-interval=30
+# [memory]
+# label=SWAP
+# instance=swap
+# separator=false
+# interval=30
 
 #| Disk usage
 #[disk]
@@ -82,17 +83,17 @@ interval=30
 #instance=eth0
 # interval=5
 
-#| CPU usage
-[cpu_usage]
-label=CPU
-interval=1
-min_width=CPU: 100.00%
-separator=true
+# #| CPU usage
+# [cpu_usage]
+# label=CPU
+# interval=1
+# min_width=CPU: 100.00%
+# separator=true
 
-[load_average]
-label=CPU AVG
-interval=10
-separator=true
+# [load_average]
+# label=CPU AVG
+# interval=10
+# separator=true
 
 #| Battery indicator
 [battery]
