--- a/.config/i3/keybindings.conf
+++ b/.config/i3/keybindings.conf
@@ -1,107 +1,107 @@
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ KEY BINDINGS ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
 
 # reload the configuration file
-bindsym   $mod+$shift+c          reload
+bindsym   $MAC_CTRL+$shift+c          reload
 
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
-bindsym   $mod+$shift+r          restart
+bindsym   $MAC_CTRL+$shift+r          restart
 
 # start a terminal
-bindsym   $mod+Return            exec $terminal
+bindsym   $MAC_CTRL+Return            exec $terminal
 
 # killing all instances of a window
-bindsym   $mod+q                 [class=__focused__] kill
+bindsym   $MAC_CMD+q                 [class=__focused__] kill
 
 # kill focused window
-bindsym   $mod+$shift+q          kill
+bindsym   $MAC_CMD+$shift+q          kill
 
 # split in horizontal orientation
-bindsym   $mod+h                 split h
+bindsym   $MAC_CTRL+h                 split h
 
 # split in vertical orientation
-bindsym   $mod+v                 split v
+bindsym   $MAC_CTRL+v                 split v
 
 # enter fullscreen mode for the focused container
 # TODO : fix
-bindsym   $ctrl+$alt+f           fullscreen toggle
+bindsym   $MAC_CMD+$MAC_CTRL+f           fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
 # TODO : fix
-# bindsym $mod+s layout stacking
-# bindsym $mod+w layout tabbed
-# bindsym $mod+e layout toggle split
+# bindsym $MAC_CTRL+s layout stacking
+# bindsym $MAC_CTRL+w layout tabbed
+# bindsym $MAC_CTRL+e layout toggle split
 
 # toggle tiling / floating
-bindsym   $mod+$shift+space      floating toggle
+bindsym   $MAC_CTRL+$shift+space      floating toggle
 
 # change focus between tiling / floating windows
-bindsym   $ctrl+$shift+space       focus mode_toggle
+bindsym   $MAC_CTRL+$shift+$tab       focus mode_toggle
 
 # focus the parent container
-bindsym   $mod+a                 focus parent
+bindsym   $MAC_CTRL+a                 focus parent
 
 # focus the child container
-bindsym   $mod+d                 focus child
+bindsym   $MAC_CTRL+d                 focus child
 
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ MOVING ACROSS WORKSPACES ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
 
 # switch to workspace using indexes
-bindsym   $mod+1                 workspace $ws1; layout tabbed
-bindsym   $mod+2                 workspace $ws2; layout tabbed
-bindsym   $mod+3                 workspace $ws3; layout tabbed
-bindsym   $mod+4                 workspace $ws4; layout stacking
-bindsym   $mod+5                 workspace $ws5; layout default
+bindsym   $MAC_CTRL+1                 workspace $ws1; layout tabbed
+bindsym   $MAC_CTRL+2                 workspace $ws2; layout tabbed
+bindsym   $MAC_CTRL+3                 workspace $ws3; layout tabbed
+bindsym   $MAC_CTRL+4                 workspace $ws4; layout stacking
+bindsym   $MAC_CTRL+5                 workspace $ws5; layout default
 
 # switch to workspace using arrow keys, and tab (not functional yet)
-# bindsym   $mod+Left              workspace next
-# bindsym   $mod+Right             workspace prev
-# bindsym   $mod+$tab              workspace back_and_forth
+bindsym   $MAC_CTRL+Left              workspace next
+bindsym   $MAC_CTRL+Right             workspace prev
+bindsym   $MAC_CMD+$tab              workspace back_and_forth
 
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ MOVING WINDOWS ACROSS WORKSPACES ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
 
 # move focused container to workspace
-bindsym   $mod+Shift+1           move container to workspace number $ws1
-bindsym   $mod+Shift+2           move container to workspace number $ws2
-bindsym   $mod+Shift+3           move container to workspace number $ws3
-bindsym   $mod+Shift+4           move container to workspace number $ws4
-bindsym   $mod+Shift+5           move container to workspace number $ws5
+bindsym   $MAC_CTRL+Shift+1           move container to workspace number $ws1
+bindsym   $MAC_CTRL+Shift+2           move container to workspace number $ws2
+bindsym   $MAC_CTRL+Shift+3           move container to workspace number $ws3
+bindsym   $MAC_CTRL+Shift+4           move container to workspace number $ws4
+bindsym   $MAC_CTRL+Shift+5           move container to workspace number $ws5
 
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ MOVING WINDOWS ON WORKSPACES ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
 
 # move focused window around
-bindsym   $mod+$shift+j           move left
-bindsym   $mod+$shift+k           move down
-bindsym   $mod+$shift+l           move up
-bindsym   $mod+$shift+semicolon   move right
+bindsym   $MAC_CTRL+$shift+j           move left
+bindsym   $MAC_CTRL+$shift+k           move down
+bindsym   $MAC_CTRL+$shift+l           move up
+bindsym   $MAC_CTRL+$shift+semicolon   move right
 
 # alternatively, you can use the cursor keys:
-bindsym   $mod+$shift+Left        move left
-bindsym   $mod+$shift+Down        move down
-bindsym   $mod+$shift+Up          move up
-bindsym   $mod+$shift+Right       move right
+bindsym   $MAC_CTRL+$shift+Left        move left
+bindsym   $MAC_CTRL+$shift+Down        move down
+bindsym   $MAC_CTRL+$shift+Up          move up
+bindsym   $MAC_CTRL+$shift+Right       move right
 
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ MOVING FOCUS BETWEEN WINDOWS ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
 
 # changing focus on window
-bindsym   $mod+j                  focus left
-bindsym   $mod+k                  focus down
-bindsym   $mod+l                  focus up
-bindsym   $mod+semicolon          focus right
+bindsym   $MAC_CTRL+j                  focus left
+bindsym   $MAC_CTRL+k                  focus down
+bindsym   $MAC_CTRL+l                  focus up
+bindsym   $MAC_CTRL+semicolon          focus right
 
 # alternatively, you can use the cursor keys:
-bindsym   $mod+Left               focus left
-bindsym   $mod+Down               focus down
-bindsym   $mod+Up                 focus up
-bindsym   $mod+Right              focus right
+# bindsym   $MAC_CTRL+Left               focus left
+# bindsym   $MAC_CTRL+Down               focus down
+# bindsym   $MAC_CTRL+Up                 focus up
+# bindsym   $MAC_CTRL+Right              focus right
 
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ MANAGING USER SESSION ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
 
 # lock screen
-bindsym   $alt+$ctrl+q             exec i3lock
+bindsym   $MAC_CMD+$MAC_CTRL+q             exec i3lock
 
 # exit i3 (logs you out of your X session)
 set       $exitWarn                "i3-nagbar -t warning -m 'Are you sure you want to log out?' -B 'confirm' 'i3-msg exit'"
-bindsym   $ctrl+Shift+q            exec $exitWarn
+bindsym   $MAC_CTRL+Shift+q            exec $exitWarn
 
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ CONTROLLING AUDIO ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
 
@@ -112,12 +112,17 @@ bindsym   XF86AudioLowerVolume     exec --no-startup-id pactl set-sink-volume @D
 bindsym   XF86AudioMute            exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
 bindsym   XF86AudioMicMute         exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 
+#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ CONTROLLING BRIGHTNESS ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
+
+bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl set +5%
+bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl set 5%-
+
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ LAUNCHER SETTINGS ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
 # A more modern dmenu replacement is rofi:
-# bindcode $mod+40 exec "rofi -modi drun,run -show drun"
+# bindcode $MAC_CTRL+40 exec "rofi -modi drun,run -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
 # .desktop file. It is a wrapper around dmenu, so you need that installed.
-# bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
+# bindcode $MAC_CTRL+40 exec --no-startup-id i3-dmenu-desktop
 
 # dmenu
 set   $search_case_insensitive     -i
@@ -126,7 +131,7 @@ set   $dmenu_foreground            -nf
 set   $dmenu_foreground_selected   -sf
 set   $dmenu_background            -nb
 set   $dmenu_background_selected   -sb
-#bindsym $mod+space exec --no-startup-id dmenu_run $search_case_insensitive $dmenu_amount_of_Lines $dmenu_background $background $dmenu_foreground $inactive $dmenu_foreground_selected $foreground $dmenu_background_selected $background
+bindsym $MAC_CMD+space exec --no-startup-id dmenu_run $search_case_insensitive $dmenu_amount_of_Lines $dmenu_background $background $dmenu_foreground $inactive $dmenu_foreground_selected $foreground $dmenu_background_selected $background
 
 # rofi
 set $rofi_amount_of_Lines  -l 10
@@ -134,12 +139,12 @@ set $rofi_width            -width 100
 set $rofi_opacity          -opacity 85
 set $rofi_foreground       -fg
 set $rofi_background       -bg
-bindsym $mod+space exec --no-startup-id rofi $rofi_opacity $rofi_width $rofi_amount_of_Lines -show run
+# bindsym $MAC_CMD+space exec --no-startup-id rofi $rofi_opacity $rofi_width $rofi_amount_of_Lines -show run
 # $rofi_foreground $foreground $rofi_background $background
 
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ RESIZING MODE ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
 
-bindsym $mod+r mode "resize"
+bindsym $MAC_CTRL+r mode "resize"
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -160,10 +165,10 @@ mode "resize" {
     bindsym Up resize shrink height 10 px or 10 ppt
     bindsym Right resize grow width 10 px or 10 ppt
 
-    # back to normal: Enter or Escape or $mod+r
+    # back to normal: Enter or Escape or $MAC_CTRL+r
     bindsym Return mode "default"
     bindsym Escape mode "default"
-    bindsym $mod+r mode "default"
+    bindsym $MAC_CTRL+r mode "default"
 }
 
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
