Added keybindings in i3wm for changing the layout.

--- a/.config/i3/keybindings.conf
+++ b/.config/i3/keybindings.conf
@@ -26,10 +26,9 @@ bindsym   $MAC_CTRL+v                 split v
 bindsym   $MAC_CMD+$MAC_CTRL+f           fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
-# TODO : fix
-# bindsym $MAC_CTRL+s layout stacking
-# bindsym $MAC_CTRL+w layout tabbed
-# bindsym $MAC_CTRL+e layout toggle split
+bindsym $MAC_CTRL+m layout stacking
+bindsym $MAC_CTRL+t layout tabbed
+bindsym $MAC_CTRL+s layout toggle split
 
 # toggle tiling / floating
 bindsym   $MAC_CTRL+$shift+space      floating toggle
