Assigned Gimp to workspace 2 on i3wm.

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -106,6 +106,7 @@ assign [class="(?i)xterm"] $ws1
 # workspace 2
 assign [class="(?i)code"] $ws2
 assign [class="(?i)kate"] $ws2
+assign [class="(?i)gimp"] $ws2
 
 # workspace 3
 assign [class="(?i)firefox"] $ws3
